--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hono/node-server": "^1.12.1",
+    "@mui/material": "^7.2.0",
+    "@mui/x-data-grid": "^8.6.0",
     "gdal-async": "^3.9.2",
     "lodash": "^4.17.21",
     "react": "18.3.1",
@@ -23,6 +27,10 @@
   "bundledDependencies": [
     "@climadex/types"
   ],
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
+  },
   "devDependencies": {
     "@emotion/babel-plugin": "11.11.0",
     "@nx/eslint": "19.6.2",
