feat: added dev command for watching changes and more efficiency

--- a/backend/project.json
+++ b/backend/project.json
@@ -7,6 +7,9 @@
     "start": {
       "command": "cd backend/src && tsx ./index.ts"
     },
+    "dev": {
+      "command": "cd backend/src && tsx --watch ./index.ts"
+    },
     "build": {
       "executor": "@nx/esbuild:esbuild",
       "outputs": ["{options.outputPath}"],
