--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@hono/node-server": "^1.12.1",
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.6.0",
+    "chart.js": "^4.5.0",
     "gdal-async": "^3.9.2",
     "lodash": "^4.17.21",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.1",
