--- a/backend/project.json
+++ b/backend/project.json
@@ -3,33 +3,34 @@
   "$schema": "../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "backend/src",
   "projectType": "application",
+  "tags": ["scope:backend", "type:app"],
+  "implicitDependencies": ["shared"],
   "targets": {
     "start": {
+      "dependsOn": ["shared:build"],
       "command": "cd backend/src && tsx ./index.ts"
     },
-    "dev": {
+    "serve": {
+      "dependsOn": ["shared:build"],
       "command": "cd backend/src && tsx --watch ./index.ts"
     },
     "build": {
-      "executor": "@nx/esbuild:esbuild",
+      "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
+      "dependsOn": ["shared:build"],
       "options": {
-        "platform": "node",
-        "outputPath": "dist/backend/",
-        "format": ["cjs"],
-        "thirdParty": true,
-        "bundle": true,
+        "outputPath": "dist/backend",
         "main": "backend/src/index.ts",
         "tsConfig": "backend/tsconfig.json",
-        "generatePackageJson": false,
-        "esbuildOptions": {
-          "sourcemap": true,
-          "outExtension": {
-            ".js": ".js"
-          }
-        }
+        "assets": ["backend/package.json"]
+      }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "lintFilePatterns": ["backend/**/*.ts"]
       }
     }
-  },
-  "tags": ["scope:backend"]
+  }
 }
