--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hono/node-server": "^1.12.1",
+    "@mapbox/node-pre-gyp": "^2.0.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-charts": "^8.7.0",
     "@mui/x-data-grid": "^8.6.0",
+    "@toolpad/core": "^0.16.0",
     "chart.js": "^4.5.0",
+    "formik": "^2.4.6",
     "gdal-async": "^3.9.2",
     "lodash": "^4.17.21",
-    "react": "18.3.1",
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "tsx": "^4.17.0"
+    "tsx": "^4.17.0",
+    "zod": "^3.25.74",
+    "zod-formik-adapter": "^1.3.0"
   },
   "implicitDependencies": [
     "shared"
@@ -50,6 +56,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
+    "@types/lodash": "^4.17.20",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
