--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/material": "^7.2.0",
     "@mui/x-charts": "^8.7.0",
     "@mui/x-data-grid": "^8.6.0",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
     "@toolpad/core": "^0.16.0",
     "chart.js": "^4.5.0",
     "formik": "^2.4.6",
