--- a/shared/project.json
+++ b/shared/project.json
@@ -9,7 +9,7 @@
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/shared",
+        "outputPath": "shared/dist",
         "main": "shared/src/index.ts",
         "tsConfig": "shared/tsconfig.json",
         "assets": ["shared/*.md"]
