--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,6 +11,10 @@
     }
   ],
   "compilerOptions": {
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "@climadex/shared": ["shared/src/index.ts"],
+      "@climadex/shared/*": ["shared/src/*"]
+    }
   }
 }
