feat: updated path for readability and applied some perfectionnist rules to have proper import ordering

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,11 +55,11 @@
               },
               {
                 "groupName": "at",
-                "elementNamePattern": "^@(mui|tanstack)"
+                "elementNamePattern": "^@(mui|tanstack|hono)"
               },
               {
                 "groupName": "frontend",
-                "elementNamePattern": "^(frontend|common|components|pages|hooks|services)"
+                "elementNamePattern": "^(frontend|common|components|pages|hooks|services|adapters|routes|utils|middlewares|validation)(\\/.*)?$"
               },
               {
                 "groupName": "relative",
