feat: update factory types and add new filters for factories
- Changed IDbFactory to DbFactory and added new properties to Factory interface.
- Introduced FactoriesFilters and FactoriesPagination interfaces for better filtering and pagination.
- Updated Vite configuration to include new utility and config paths.
- Added .env file for public API URL configuration.
- Created common styles for the Wrapper component.
- Implemented RiskBadge component to display risk levels with tooltips.
- Developed RiskOverviewCard component for displaying climate risk assessments.
- Added TemperatureIncreaseChart component for visualizing temperature increases.
- Set up router configuration for application navigation.
- Created AddFactoryForm component for adding new factories with validation.
- Enhanced FactoriesTable component with filtering and pagination capabilities.
- Implemented reset script for cleaning and reinstalling dependencies.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,12 +62,12 @@
                 "elementNamePattern": "^(frontend|common|components|pages|hooks|services|adapters|routes|utils|middlewares|validation)(\\/.*)?$"
               },
               {
-                "groupName": "relative",
-                "elementNamePattern": "^\\.{1,2}\\/.*"
-              },
-              {
                 "groupName": "styles",
                 "elementNamePattern": ".*\\.(css|scss|sass)$"
+              },
+              {
+                "groupName": "relative",
+                "elementNamePattern": "^(\\.{1,2}\\/.*|\\.\\/.*)$"
               }
             ]
           }
