--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,7 +16,11 @@
       "pages": ["frontend/src/pages/index.ts"],
       "pages/*": ["frontend/src/pages/*"],
       "common": ["frontend/src/common/index.ts"],
-      "common/*": ["frontend/src/common/*"]
+      "common/*": ["frontend/src/common/*"],
+      "config": ["frontend/src/config/index.ts"],
+      "config/*": ["frontend/src/config/*"],
+      "utils": ["frontend/src/utils/index.ts"],
+      "utils/*": ["frontend/src/utils/*"]
     }
   },
   "files": [],
