refactor: update type exports in index and factory files, remove unused types, and streamline tsconfig includes

--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -8,5 +8,5 @@
     "moduleResolution": "Node",
     "esModuleInterop": true
   },
-  "include": ["src", "constants.ts", "index.ts", "types.ts"]
+  "include": ["src", "constants.ts", "index.ts"]
 }
