--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query-devtools": "^5.81.5",
     "@toolpad/core": "^0.16.0",
     "chart.js": "^4.5.0",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "gdal-async": "^3.9.2",
     "lodash": "^4.17.21",
